--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,3 +1,4 @@
+
 @import "bootstrap";
 
 .clear {
@@ -35,6 +36,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #DE1F1F;
+  font-family: 'allerregular', sans-serif;
+  font-weight: bold;
 }
 header {
   border-top: 9px solid #222222;
@@ -42,4 +45,11 @@ header {
 hr {
   clear: both;
 }
-
+h1 {
+  font-family: 'allerregular', sans-serif;
+  font-weight: bold;
+  font-size: 48px
+}
+h2 {
+  font-family: 'alleritalic', sans-serif;
+}
