--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -5,12 +5,12 @@ html {
   min-height: 100% 
 }
 body {
-  /* Margin bottom by footer heigh */
+  /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
 .footer {
   position: absolute;
-  bottom: 0;
+  bottom: 1;
   width: 100%;
   height: 60px;
 }
