--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,14 @@
         <% end %>
       </div>
 
-      <div class="col-4 slogan">
+      <div class="col col-sm-4 hidden-xs-down slogan">
         Splurting out the annoying conversational tidbits about Colorado since 2019
       </div>
 
-      <div class="col-5 links">
+      <div class="col-10 offest-1 offset-sm-0 col-sm-5 links">
          <!-- Button trigger modal -->
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+        &nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
 
@@ -49,8 +50,9 @@
           </div>
           <%= simple_form_for Quote.new do |f| %>
             <div class="modal-body">
-              <%= f.input :saying %>
-              <%= f.input :author %>
+              <%= f.input :saying, label: "What saying would you like to add?", placeholder: "It smells like cows today." %>
+              <br />
+              <%= f.input :author, label: "Take credit! Add your name.", placeholder: "Jim" %>
             </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -77,11 +79,11 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
           <%= link_to "This isn't enough, I need more.", root_path, class: 'next-quote' %>
           </div>
-          <div class="col-6 footer-blurb">
-            Proudly hacked by <a href="https://melaniealocke.netlify.com">Melanie Locke</a>
+          <div class="col-12 col-sm-6 footer-blurb">
+            Proudly built by <a href="https://melaniealocke.netlify.com">Melanie Locke</a>
           </div>
         </div>
       </div>
