--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,2 +1,15 @@
+<h2>
+  <span>SPLURTY No. <%= @quote.id %></span>
+  You know you're in Colorado when you hear... 
+</h2>
+
+
 <h1><%= @quote.inspect %></h1>
-<h2>- <%= @quote.author %></h2>
+<h2 class="float-right">- <%= @quote.author %></h2>
+
+<br class="clear" />
+<br />
+<br />
+<br />
+<br />
+<br />
