Final touch-ups 8/20

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,10 @@
         Splurting out the annoying conversational tidbits about Colorado since 2019
       </div>
 
-      <div class="col-10 offest-1 offset-sm-0 col-sm-5 links">
+      <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
          <!-- Button trigger modal -->
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
-        &nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;
         <%= link_to 'About', about_path %>
       </div>
 
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-  
+
     <hr />
 
     <br class="clear" />
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-6">
-          <%= link_to "This isn't enough, I need more.", root_path, class: 'next-quote' %>
+          <%= link_to "Another hit.", root_path, class: 'next-quote' %>
           </div>
           <div class="col-12 col-sm-6 footer-blurb">
             Proudly built by <a href="https://melaniealocke.netlify.com">Melanie Locke</a>
