--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -2,16 +2,11 @@
   <h1>About Splurty</h1>
 
   <p>
-    Splurty was built by <a target="_blank" href="http://github.com/MelanieALocke">Melanie</a>. Melanie is a Colorado native who has seen how the state has grown and changed over the last 25 years. 
+    Splurty was built by <a target="_blank" href="http://github.com/MelanieALocke">Melanie</a>, a Colorado native who has seen how the state has grown and changed over the last 25 years. Melanie is combining her budding coding skills with humor to call out all the transplants causing traffic jams throughout the state.
   </p>
+
   <br />
-  <p>
-    Melanie is combining her budding coding skills with humor to call out all the transplants causing traffic jams throughout the state. 
-  </p>
   <br />
-  <p>
-    Learn more about Melanie's other projects by visiting <a target="_blank" href="https://melaniealocke.netlify.com"> her portfolio.</a>
-  </p>
 
   <div class="row">
     <div class="col-12 col-sm-4">
@@ -22,10 +17,15 @@
       <h2 class="text-center">Melanie Locke</h2>
       <br />
       <p class="text-center">
-        Melanie is a web developer and writer.
+        Melanie is a web developer and writer. Whether she's writing programs or crafting web copy, Melanie has a knack for finding the perfect phrase. Learn more about Melanie's other projects by visiting <a target="_blank" href="https://melaniealocke.netlify.com"> her portfolio.</a>
       </p>
     </div>
   </div>
   <br class="clear" />
 
 </div>
+
+<br class="clear" />
+<br />
+<br />
+<br />
