--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -3,8 +3,11 @@
   You know you're in Colorado when you hear... 
 </h2>
 
+<br />
+<br />
 
-<h1><%= @quote.inspect %></h1>
+<h1><%= @quote.saying %></h1>
+<br />
 <h2 class="float-right">- <%= @quote.author %></h2>
 
 <br class="clear" />
