--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -14,7 +14,7 @@
     border: 1px solid #F7F7F7;
     width: 80px;
     height: 80px;
-    margin: 10px 10px;
+    margin: 10px 30px;
     text-align: center;
     color: #FFF;
     font-size: 10px;
@@ -30,8 +30,9 @@
   padding-top: 26px;
 }
 .links {
+  position: relative;
+  right: -100px;
   padding-top: 25px;
-  float: right;
 }
 .links a {
   color: black;
